# DetectOutlier

./: .gitignore  README.md  outlierdetect.toml  pyproject.toml
docs/: .gitignore  conf.py  configuration.md  index.md  physics.md  pipeline_report.tex
docs/api/: argo.md  cli.md  corrections.md  data.md  density.md  en4.md  features.md  index.md  model.md  package.md  parquet.md  runtime_config.md  tool.md
docs/api/training/: argo.md  artifacts.md  dataset.md  en4.md  index.md  synthetic.md  train.md
examples/: minimal_predict.py
src/outlierdetect/: __init__.py  argo.py  cli.py  climatology.py  corrections.py  data.py  density.py  en4.py  features.py  model.py  netcdf_backend.py  parquet.py  runtime_config.py  tool.py
src/outlierdetect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/outlierdetect/training/: __init__.py  argo.py  artifacts.py  builders.py  dataset.py  en4.py  streaming.py  synthetic.py  train.py
tests/: test_mvp.py
